--- a/PrepVerifMattioni/src/app/app.component.html
+++ b/PrepVerifMattioni/src/app/app.component.html
@@ -2,15 +2,19 @@
     <form class="jumbotron">
         <h3 class="display-4">Add a email</h3>
         <div class="form-group">
-          <label for="title">Email</label>
+          <label for="title">Email:</label>
           <input name="title" #email class="form-control">
         </div>
+        <br>
         <div class="form-group">
-          <label for="link">Oggetto</label>
+          <label for="link">Oggetto:</label>
           <input name="link" #oggetto class="form-control">
         </div>
-      <button (click)="addEmail(email, oggetto)">
-        Submit link
+        <br>
+        <label for="link">Testo:</label>
+          <input name="link" #testo class="form-control">
+      <button (click)="addEmail(email, oggetto, testo)">
+        INVIA
       </button>
     </form>
   </div>
